--- a/src/main/webapp/app/modulos/pedido/pedidos.html
+++ b/src/main/webapp/app/modulos/pedido/pedidos.html
@@ -31,7 +31,7 @@
                       <a href="#!pedido/{{pedido.id}}">Detalhes</a>
                     </td>
                     <td class="linha-carrinho">
-                      <a href="#" ng-click="vmPedidos.downloadXML(pedido.id)">Download XML</a>
+                      <a href="#!pedidos" ng-click="vmPedidos.downloadXML(pedido.id)">Download XML</a>
                     </td>
                 </tr>
             </tbody>
